test/error/OpEqualStringStgNull.ci
public static class Test
{
	public static bool Run()
	{
		string() s = "foo";
		// FIXME:
		return s == null; //ERROR: Cannot compare  with null
	}
}
